name:                reflex-wx
version:             0.1.0.0
synopsis:            Reflex bindings for wxHaskell.
description:         Reflex-WX is a Functional Reactive GUI framework based on
                     the wxHaskell GUI bindings and Reflex FRP engine
license:             OtherLicense
license-file:        LICENSE
author:              Joshua Brot
maintainer:          joshuabrot@gmail.com
stability:           experimental
category:            FRP
build-type:          Simple
cabal-version:       >=1.10


library
  build-depends:       base   >=4.7 && <4.8,
                       reflex == 0.2.*,
                       wxcore == 0.91.*,
                       wx     == 0.91.*
  hs-source-dirs:      src/main
  default-language:    Haskell2010

  exposed-modules:     Reflex.WX
