name:                reflex-wx
version:             0.1.0.0
synopsis:            Reflex bindings for wxHaskell.
description:         Reflex-WX is a Functional Reactive GUI framework based on
                     the wxHaskell GUI bindings and Reflex FRP engine
license:             OtherLicense
license-file:        LICENSE
author:              Joshua Brot
maintainer:          joshuabrot@gmail.com
stability:           experimental
category:            FRP
build-type:          Simple
cabal-version:       >=1.10


library
  build-depends:       base         >= 4.8 && <4.9,
                       containers   == 0.5.*,
                       mtl          >= 2.1 && <2.3,
                       reflex       == 0.2.*,
                       transformers == 0.4.*,
                       wxcore       == 0.92.*,
                       wx           == 0.92.*
  hs-source-dirs:      src/main
  default-language:    Haskell2010

  exposed-modules:     Reflex.WX,
                       Reflex.WX.Class,
                       Reflex.WX.Controls,
                       Reflex.WX.Internal
executable example
  main-is:             Main.hs
  build-depends:       base         >=4.8 && <4.9,
                       containers   == 0.5.*,
                       mtl          >= 2.1 && <2.3,
                       reflex       == 0.2.*,
                       reflex-wx,
                       transformers == 0.4.*,
                       wxcore       == 0.92.*,
                       wx           == 0.92.*
  hs-source-dirs:      src/test
  default-language:    Haskell2010
